WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
143064
REGRESSION (
r181660
): Force click url preview doesn't have a TextIndicator in Mail
https://bugs.webkit.org/show_bug.cgi?id=143064
Summary
REGRESSION (r181660): Force click url preview doesn't have a TextIndicator in...
Beth Dakin
Reported
2015-03-25 16:22:33 PDT
REGRESSION (
r181660
): Force click url preview doesn't have a TextIndicator in Mail
rdar://problem/20251440
Attachments
Patch
(1.58 KB, patch)
2015-03-25 16:30 PDT
,
Beth Dakin
thorton
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Beth Dakin
Comment 1
2015-03-25 16:30:54 PDT
Created
attachment 249441
[details]
Patch
Beth Dakin
Comment 2
2015-03-25 16:38:46 PDT
http://trac.webkit.org/changeset/181985
Thanks Tim!
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug